--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,42 @@
  *= require_self
  */
 @import 'bootstrap';
+
+
+
+// Global
+a {
+    text-decoration: none;
+    padding: 80px 0;
+    text-align: center;
+  }
+  
+//   .page-content {
+//     padding: 80px 0;
+//   }
+  
+//   .center {
+//     text-align: center;
+//   }
+
+// ------HOME-------
+.homeHeader {
+    display: flex;
+    text-align: center;
+    color:black;
+}
+
+.homeText {
+    display: flex;
+    justify-content: content;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.homeImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
