--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,11 +58,12 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: center; 
+  
     
   }
   
   .card-image {
     width: 300px;
-    background-color: #FFFEF1;
+    background-color: #fffef1b0;
     margin: 20px;
   }
